--- a/index.html
+++ b/index.html
@@ -457,13 +457,13 @@
                         </div>
                         <div class="scrollable-section">
                             <h4 class="font-bold text-lg mb-2">Occasion Posts</h4>
-                            <img src="https://placehold.co/600x400/ffedd5/c2410c?text=Happy+Durga+Puja" class="rounded w-full h-auto">
-                            <img src="https://placehold.co/600x400/ffedd5/c2410c?text=Diwali+Offer" class="rounded w-full h-auto mt-4">
+                            <img src="" class="rounded w-full h-auto">
+                            <img src="" class="rounded w-full h-auto mt-4">
                         </div>
                         <div class="scrollable-section">
                             <h4 class="font-bold text-lg mb-2">Event Banners</h4>
-                            <img src="https://placehold.co/600x400/ffedd5/c2410c?text=Exhibition+Gate" class="rounded w-full h-auto">
-                            <img src="https://placehold.co/600x400/ffedd5/c2410c?text=In-Store+Demo" class="rounded w-full h-auto mt-4">
+                            <img src="" class="rounded w-full h-auto">
+                            <img src="" class="rounded w-full h-auto mt-4">
                         </div>
                          <div class="scrollable-section">
                             <h4 class="font-bold text-lg mb-2">Reel Previews</h4>
@@ -1011,6 +1011,7 @@
 
 </body>
 </html>
+
 
 
 
